--- a/code-gen/src/main/resources/application.yml
+++ b/code-gen/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url:  jdbc:mysql://127.0.0.1:3306/personal_database
+        url:  jdbc:mysql://127.0.0.1:3306/test_personal
         username: root
         password: anywhere
         driver-class-name:  com.mysql.jdbc.Driver
