--- a/code-gen/src/main/resources/application.yml
+++ b/code-gen/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
     datasource:
-        url:  jdbc:mysql://127.0.0.1:3306/personal_database
+        url:  jdbc:mysql://127.0.0.1:3306/test_personal
         username: root
         password: anywhere
         driver-class-name:  com.mysql.jdbc.Driver
+
+local:
+  databaseName: qq_data
 
 ignoreFields: id,is_deleted,create_time,last_update_time
