--- a/code-gen/src/main/resources/application.yml
+++ b/code-gen/src/main/resources/application.yml
@@ -7,5 +7,9 @@ spring:
 
 local:
   databaseName: qq_data
+  enums:
+    - is_auto_comment,4,5
+    - from_new,7,8
 
 ignoreFields: id,is_deleted,create_time,last_update_time
+
